# cpf_cnpj_validator

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: deploy.yaml
k8s/: configmap-haproxy.yaml  deployment.yaml  ingress.yaml  service.yaml
nginx/: nginx.conf
src/: anonymization.rs  main.rs  models.rs  validation.rs
