[package]
name = "cpf-cnpj-validator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cpf-cnpj-validator"
path = "src/main.rs"

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
regex = "1.5"
tokio = { version = "1.0", features = ["full"] }
md-5 = "0.10.6"
sha-1 = "0.10.1"
sha2 = "0.10.8"
proptest = "1.0"
criterion = "0.3"
serde_json = "1.0.140"
